Highlight active tmux pane; C-e edits .tmux.conf not local

--- a/macbook-pro-15/.tmux.conf
+++ b/macbook-pro-15/.tmux.conf
@@ -23,7 +23,8 @@ bind C-a send-prefix -2
 set -g history-limit 5000                 # boost history
 
 # edit configuration
-bind e new-window -n '~/.tmux.conf.local' "sh -c '\${EDITOR:-vim} ~/.tmux.conf.local && tmux source ~/.tmux.conf && tmux display \"Reloaded! ~/.tmux.conf\"'"
+bind e new-window -n '~/.tmux.conf' "sh -c '\${EDITOR:-vim} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"Reloaded! ~/.tmux.conf\"'"
+#bind e new-window -n '~/.tmux.conf.local' "sh -c '\${EDITOR:-vim} ~/.tmux.conf.local && tmux source ~/.tmux.conf && tmux display \"Reloaded! ~/.tmux.conf\"'"
 
 # reload configuration
 bind r source-file ~/.tmux.conf \; display 'Reloaded! ~/.tmux.conf'
@@ -149,8 +150,8 @@ if -b 'which -s reattach-to-user-namespace' 'bind y run "tmux save-buffer - | re
 
 #set -g window-style 'fg=colour247,bg=colour236'
 #set -g window-active-style 'fg=colour250,bg=black'
-#set -g window-style 'fg=black,bg=colour253'
-#set -g window-active-style 'fg=colour236,bg=colour252'
+set -g window-style 'fg=black,bg=colour250'
+set -g window-active-style 'fg=colour236,bg=colour253'
 
 # -- user defined --------------------------------------------------------------
 
