Update vim & tmux

--- a/macbook-pro-15/.tmux.conf
+++ b/macbook-pro-15/.tmux.conf
@@ -1,8 +1,14 @@
 # cat << ►_◄ > /dev/null
 # (‑●‑●)> released under the WTFPL v2 license, by Gregory Pakosz (@gpakosz)
 
+bind-key -t emacs-copy MouseDragEnd1Pane copy-pipe "pbcopy"
+bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "pbcopy"
+
 # -- general -------------------------------------------------------------------
 set -g mouse on
+
+bind-key - split-window
+bind-key _ split-window -h
 
 set-window-option -g mode-keys vi
 
@@ -148,10 +154,17 @@ bind -t vi-copy L end-of-line
 if -b 'which -s reattach-to-user-namespace' 'bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
 
 
-#set -g window-style 'fg=colour247,bg=colour236'
+#set -g window-active-style 'fg=colour236,bg=colour11'
+
+# COLOR SCHEME 2
+#set -g window-style 'fg=colour243,bg=black'
 #set -g window-active-style 'fg=colour250,bg=black'
-set -g window-style 'fg=black,bg=colour250'
-set -g window-active-style 'fg=colour236,bg=colour253'
+
+# COLOR SCHEME 1
+# set -g window-style 'fg=black,bg=colour250'
+# set -g window-active-style 'fg=colour236,bg=colour253'
+set -g window-style 'fg=colour250,bg=colour234'
+set -g window-active-style 'fg=colour253,bg=colour236'
 
 # -- user defined --------------------------------------------------------------
 
