Add powerline to tmux

--- a/macbook-pro-retina/.tmux.conf
+++ b/macbook-pro-retina/.tmux.conf
@@ -1,139 +1,182 @@
-# 0 is too far from ` ;)
-set -g base-index 1
+# cat << ►_◄ > /dev/null
+# (‑●‑●)> released under the WTFPL v2 license, by Gregory Pakosz (@gpakosz)
 
-# Automatically set window title
-set-window-option -g automatic-rename on
-set-option -g set-titles on
+bind-key -t emacs-copy MouseDragEnd1Pane copy-pipe "pbcopy"
+bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "pbcopy"
 
-#set -g default-terminal screen-256color
-set -g status-keys vi
-set -g history-limit 10000
+# -- general -------------------------------------------------------------------
+set -g mouse on
 
-setw -g mode-keys vi
-setw -g mouse on
-setw -g monitor-activity on
+bind-key - split-window
+bind-key _ split-window -h
 
-bind-key v split-window -h
-bind-key s split-window -v
+set-window-option -g mode-keys vi
 
+set -g pane-border-fg black
+set -g pane-border-bg black
+set -g pane-active-border-bg yellow
+set -g pane-active-border-fg black
+
+set -g default-terminal "screen-256color" # colors!
+setw -g xterm-keys on
+set -s escape-time 0                      # fastest command sequences
+set -sg repeat-time 600                   # increase repeat timeout
+set -s quiet on                           # disable various messages
+
+set -g prefix2 C-a                        # GNU-Screen compatible prefix
+bind C-a send-prefix -2
+
+set -g history-limit 5000                 # boost history
+
+# edit configuration
+bind e new-window -n '~/.tmux.conf' "sh -c '\${EDITOR:-vim} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"Reloaded! ~/.tmux.conf\"'"
+#bind e new-window -n '~/.tmux.conf.local' "sh -c '\${EDITOR:-vim} ~/.tmux.conf.local && tmux source ~/.tmux.conf && tmux display \"Reloaded! ~/.tmux.conf\"'"
+
+# reload configuration
+bind r source-file ~/.tmux.conf \; display 'Reloaded! ~/.tmux.conf'
+
+# see https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
+if 'which -s reattach-to-user-namespace' 'set -g default-command "exec initializing... 2> /dev/null & reattach-to-user-namespace $SHELL -l"'
+
+
+# -- display -------------------------------------------------------------------
+
+set -g base-index 1         # start windows numbering at 1
+setw -g pane-base-index 1   # make pane numbering consistent with windows
+
+setw -g automatic-rename on # rename window to reflect current program
+# renumber windows when a window is closed
+set -g renumber-windows on
+
+set -g set-titles on                        # set terminal title
+set -g set-titles-string '#h ❐ #S ● #I #W'
+
+set -g display-panes-time 800 # slightly longer pane indicators display time
+set -g display-time 1000      # slightly longer status messages display time
+
+set -g status-interval 15     # redraw status line every 10 seconds
+
+# 24 hour clock
+setw -g clock-mode-style 24
+
+# clear both screen and history
+# bind -n C-l send-keys C-l \; run 'tmux clear-history'
+# bind -n C-l \; run "clear"
+bind u send-keys C-l \; run-shell "sleep .3s" \; clear-history
+
+# activity
+set -g monitor-activity on
+set -g visual-activity off
+
+
+# -- navigation ----------------------------------------------------------------
+
+# find session
+bind C-f command-prompt -p find-session 'switch-client -t %%'
+
+# pane navigation
+bind -r h select-pane -L  # move left
+bind -r j select-pane -D  # move down
+bind -r k select-pane -U  # move up
+bind -r l select-pane -R  # move right
+bind > swap-pane -D       # swap current pane with the next one
+bind < swap-pane -U       # swap current pane with the previous one
+
+# maximize current pane
+bind + run 'cut -c3- ~/.tmux.conf | sh -s maximize_pane'
+
+# pane resizing
 bind -r H resize-pane -L 1
 bind -r J resize-pane -D 1
 bind -r K resize-pane -U 1
 bind -r L resize-pane -R 1
 
-# Vim style pane selection
-bind h select-pane -L
-bind j select-pane -D 
-bind k select-pane -U
-bind l select-pane -R
+# window navigation
+unbind n
+unbind p
+bind -r C-h previous-window # select previous window
+bind -r C-l next-window     # select next window
+bind Tab last-window        # move to last active window
 
-# Use Alt-vim keys without prefix key to switch panes
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D 
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
-
-# Use Alt-arrow keys without prefix key to switch panes
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
-
-# Shift arrow to switch windows
-bind -n S-Left  previous-window
-bind -n S-Right next-window
-
-# No delay for escape key press
-set -sg escape-time 0
-
-# Reload tmux config
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
-# THEME
-set -g status-bg black
-set -g status-fg white
-set -g window-status-current-bg white
-set -g window-status-current-fg black
-set -g window-status-current-attr bold
-set -g status-interval 60
-set -g status-left-length 50
-set -g status-left '#[fg=green](#S) #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)'
-#set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
-set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
+# toggle mouse
+# bind m run "cut -c3- ~/.tmux.conf | sh -s toggle_mouse"
+# bind m sh -s toggle_mouse
 
 
-# OLD TMUX 
-#set -g default-terminal "screen-256color"
-#
-#set -g prefix C-a
-#unbind C-b
-#
-#bind C-a send-prefix
-#
-#set -sg escape-time 1
-#
-#bind r source-file ~/.tmux.conf \; display "Reloaded!"
-#
-#bind | split-window -h
-#bind - split-window -v
-#
-#bind -r H resize-pane -L 1
-#bind -r J resize-pane -D 1
-#bind -r K resize-pane -U 1
-#bind -r L resize-pane -R 1
-#
-#setw -g mode-mouse on
-#set -g mouse-select-pane on
-#set -g mouse-resize-pane on
-#set -g mouse-select-window on
-#
-#set -g status-fg white
-#set -g status-bg black
-#
-#setw -g window-status-fg cyan
-#setw -g window-status-bg default
-#setw -g window-status-attr dim
-#
-#setw -g window-status-current-fg white
-#setw -g window-status-current-bg red
-#setw -g window-status-current-attr bright
-#
-#set -g pane-border-fg color
-#set -g pane-border-bg color
-#
-#set -g pane-active-border-fg color
-#set -g pane-active-border-bg color
-#
-#set -g pane-border-fg green
-#set -g pane-border-bg black
-#set -g pane-active-border-fg white
-#set -g pane-active-border-bg yellow
-#
-#set -g message-fg yellow
-#set -g message-bg black
-#set -g message-attr bright
-#
-#set -g status-utf8 on
-#
-#set -g status-left-length 40
-#set -g status-left "#[fg=green]Session: #S, #[fg=yellow]wn: #I, #[fg=cyan]pane: #P"
-#
-#set -g status-right "#[fg=#00ff7f]#(ruby -v | cut -c -13) #[fg=#ffe4fe]#(rails -v)"
-#
-#set -g status-utf8 on
-#
-#set -g status-justify centre
-#
-#setw -g monitor-activity on
-#set -g visual-activity on
-#
-#setw -g mode-keys vi
-#
-#unbind [
-#bind Escape copy-mode
-#unbind p
-#bind p paste-buffer
-#bind -t vi-copy 'v' begin-selection bind -t vi-copy 'y' copy-selectio:
-#
-#bind p new-window -d -n tmp \; swap-pane -s tmp.0 \; select-window -t tmp
-#bind o last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
+# -- urlview -------------------------------------------------------------------
+
+bind U run "cut -c3- ~/.tmux.conf | sh -s urlview #{pane_id}"
+
+
+# -- facebook pathpicker -------------------------------------------------------
+
+bind F run "cut -c3- ~/.tmux.conf | sh -s fpp #{pane_id}"
+
+
+# -- list choice ---------------------------------------------------------------
+
+bind -t vi-choice h tree-collapse
+bind -t vi-choice l tree-expand
+run -b 'tmux bind -t vi-choice K start-of-list 2> /dev/null'
+run -b 'tmux bind -t vi-choice J end-of-list 2> /dev/null'
+bind -t vi-choice H tree-collapse-all
+bind -t vi-choice L tree-expand-all
+bind -t vi-choice Escape cancel
+
+
+# -- edit mode -----------------------------------------------------------------
+
+# the following vi-copy bindings match my vim settings
+#   see https://github.com/gpakosz/.vim.git
+bind -ct vi-edit H start-of-line
+bind -ct vi-edit L end-of-line
+bind -ct vi-edit q cancel
+bind -ct vi-edit Escape cancel
+
+
+# -- copy mode -----------------------------------------------------------------
+
+bind Enter copy-mode # enter copy mode
+bind b list-buffers  # list paster buffers
+bind p paste-buffer  # paste from the top pate buffer
+bind P choose-buffer # choose which buffer to paste from
+
+# the following vi-copy bindings match my vim settings
+#   see https://github.com/gpakosz/.vim.git
+bind -t vi-copy v begin-selection
+bind -t vi-copy C-v rectangle-toggle
+bind -t vi-copy y copy-selection
+bind -t vi-copy Escape cancel
+bind -t vi-copy H start-of-line
+bind -t vi-copy L end-of-line
+
+# copy to Mac OSX pasteboard
+if -b 'which -s reattach-to-user-namespace' 'bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
+
+
+#set -g window-active-style 'fg=colour236,bg=colour11'
+
+# COLOR SCHEME 2
+#set -g window-style 'fg=colour243,bg=black'
+#set -g window-active-style 'fg=colour250,bg=black'
+
+# COLOR SCHEME 1
+# set -g window-style 'fg=black,bg=colour250'
+# set -g window-active-style 'fg=colour236,bg=colour253'
+set -g window-style 'fg=colour250,bg=colour234'
+set -g window-active-style 'fg=colour253,bg=colour236'
+
+# -- user defined --------------------------------------------------------------
+
+if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
+
+
+# -- 8< ------------------------------------------------------------------------
+
+run 'cut -c3- ~/.tmux.conf | sh -s apply_configuration'
+
+# Powerline
+run-shell "powerline-daemon -q"
+source "/usr/local/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf"
+
+
