--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,21 +1,19 @@
+set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+
 # cat << ►_◄ > /dev/null
 # (‑●‑●)> released under the WTFPL v2 license, by Gregory Pakosz (@gpakosz)
 
 # -- general -------------------------------------------------------------------
 set -g mouse on
 
-set-window-option -g mode-keys vi
-
-set -g pane-border-fg black
-set -g pane-border-bg black
-set -g pane-active-border-bg yellow
-set -g pane-active-border-fg black
+#set-window-option -g mode-keys vi
+set-option -g default-shell /bin/bash
 
 set -g default-terminal "screen-256color" # colors!
 setw -g xterm-keys on
 set -s escape-time 0                      # fastest command sequences
 set -sg repeat-time 600                   # increase repeat timeout
-set -s quiet on                           # disable various messages
+#set -s quiet on                           # disable various messages
 
 set -g prefix2 C-a                        # GNU-Screen compatible prefix
 bind C-a send-prefix -2
@@ -23,7 +21,7 @@ bind C-a send-prefix -2
 set -g history-limit 5000                 # boost history
 
 # edit configuration
-bind e new-window -n '~/.tmux.conf.local' "sh -c '\${EDITOR:-vim} ~/.tmux.conf.local && tmux source ~/.tmux.conf && tmux display \"Reloaded! ~/.tmux.conf\"'"
+bind e new-window -n '~/.tmux.conf' "sh -c '\${EDITOR:-vim} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"Reloaded! ~/.tmux.conf \"'"
 
 # reload configuration
 bind r source-file ~/.tmux.conf \; display 'Reloaded! ~/.tmux.conf'
@@ -60,7 +58,6 @@ bind u send-keys C-l \; run-shell "sleep .3s" \; clear-history
 # activity
 set -g monitor-activity on
 set -g visual-activity off
-
 
 # -- navigation ----------------------------------------------------------------
 
@@ -107,23 +104,23 @@ bind F run "cut -c3- ~/.tmux.conf | sh -s fpp #{pane_id}"
 
 # -- list choice ---------------------------------------------------------------
 
-bind -t vi-choice h tree-collapse
-bind -t vi-choice l tree-expand
-run -b 'tmux bind -t vi-choice K start-of-list 2> /dev/null'
-run -b 'tmux bind -t vi-choice J end-of-list 2> /dev/null'
-bind -t vi-choice H tree-collapse-all
-bind -t vi-choice L tree-expand-all
-bind -t vi-choice Escape cancel
+#bind -t vi-choice h tree-collapse
+#bind -t vi-choice l tree-expand
+#run -b 'tmux bind -t vi-choice K start-of-list 2> /dev/null'
+#run -b 'tmux bind -t vi-choice J end-of-list 2> /dev/null'
+#bind -t vi-choice H tree-collapse-all
+#bind -t vi-choice L tree-expand-all
+#bind -t vi-choice Escape cancel
 
 
 # -- edit mode -----------------------------------------------------------------
 
 # the following vi-copy bindings match my vim settings
 #   see https://github.com/gpakosz/.vim.git
-bind -ct vi-edit H start-of-line
-bind -ct vi-edit L end-of-line
-bind -ct vi-edit q cancel
-bind -ct vi-edit Escape cancel
+#bind -ct vi-edit H start-of-line
+#bind -ct vi-edit L end-of-line
+#bind -ct vi-edit q cancel
+#bind -ct vi-edit Escape cancel
 
 
 # -- copy mode -----------------------------------------------------------------
@@ -135,21 +132,16 @@ bind P choose-buffer # choose which buffer to paste from
 
 # the following vi-copy bindings match my vim settings
 #   see https://github.com/gpakosz/.vim.git
-bind -t vi-copy v begin-selection
-bind -t vi-copy C-v rectangle-toggle
-bind -t vi-copy y copy-selection
-bind -t vi-copy Escape cancel
-bind -t vi-copy H start-of-line
-bind -t vi-copy L end-of-line
+#bind -t vi-copy v begin-selection
+#bind -t vi-copy C-v rectangle-toggle
+#bind -t vi-copy y copy-selection
+#bind -t vi-copy Escape cancel
+#bind -t vi-copy H start-of-line
+#bind -t vi-copy L end-of-line
 
 # copy to Mac OSX pasteboard
 if -b 'which -s reattach-to-user-namespace' 'bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
 
-
-#set -g window-style 'fg=colour247,bg=colour236'
-#set -g window-active-style 'fg=colour250,bg=black'
-#set -g window-style 'fg=black,bg=colour253'
-#set -g window-active-style 'fg=colour236,bg=colour252'
 
 # -- user defined --------------------------------------------------------------
 
@@ -159,6 +151,23 @@ if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
 # -- 8< ------------------------------------------------------------------------
 
 run 'cut -c3- ~/.tmux.conf | sh -s apply_configuration'
+
+# MAKE SURE THE WINDOW STYLES ARE AT THE BOTTOM
+
+# set -g window-style 'fg=black,bg=colour253'
+# set -g window-style 'fg=colour236,bg=colour252'
+#set -g window-active-style 'fg=colour236,bg=colour252'
+
+# inactive/active window styles
+set -g window-style 'fg=colour240,bg=colour236'
+set -g window-active-style 'fg=colour250,bg=black'
+
+#set -g pane-border-fg black
+#set -g pane-border-bg black
+#set -g pane-active-border-bg yellow
+set -g pane-active-border-fg yellow
+
+
 
 # ►_◄
 #
