--- a/i3wm/config
+++ b/i3wm/config
@@ -31,6 +31,7 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec termite
+bindsym $mod+Shift+Return exec google-chrome
 # bindsym $mod+Return exec i3-sensible-terminal
 
 # kill focused window
