--- a/i3wm/config
+++ b/i3wm/config
@@ -31,7 +31,8 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec termite
-bindsym $mod+Shift+Return exec google-chrome
+bindsym $mod+Shift+o exec xdg-open http://google.co.uk
+bindsym $mod+Shift+Return ecu
 # bindsym $mod+Return exec i3-sensible-terminal
 
 # kill focused window
