--- a/i3wm/config
+++ b/i3wm/config
@@ -39,10 +39,10 @@ bindsym $mod+Shift+Return ecu
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+#bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec rofi -show run
+bindsym $mod+Shift+d exec rofi -show window
 # There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
@@ -109,16 +109,30 @@ set $ws9 "9"
 set $ws10 "10"
 
 # switch to workspace
-bindsym $mod+1 workspace $ws1
-bindsym $mod+2 workspace $ws2
-bindsym $mod+3 workspace $ws3
-bindsym $mod+4 workspace $ws4
-bindsym $mod+5 workspace $ws5
-bindsym $mod+6 workspace $ws6
-bindsym $mod+7 workspace $ws7
-bindsym $mod+8 workspace $ws8
-bindsym $mod+9 workspace $ws9
-bindsym $mod+0 workspace $ws10
+# bindsym $mod+1 workspace $ws1
+# bindsym $mod+2 workspace $ws2
+# bindsym $mod+3 workspace $ws3
+# bindsym $mod+4 workspace $ws4
+# bindsym $mod+5 workspace $ws5
+# bindsym $mod+6 workspace $ws6
+# bindsym $mod+7 workspace $ws7
+# bindsym $mod+8 workspace $ws8
+# bindsym $mod+9 workspace $ws9
+# bindsym $mod+0 workspace $ws10
+#
+# The reason for the difference, is so that
+# workspaces can be renamed, e.g. '5: ssh'
+# and still work.
+bindsym $mod+1 workspace number 1
+bindsym $mod+2 workspace number 2
+bindsym $mod+3 workspace number 3
+bindsym $mod+4 workspace number 4
+bindsym $mod+5 workspace number 5
+bindsym $mod+6 workspace number 6
+bindsym $mod+7 workspace number 7
+bindsym $mod+8 workspace number 8
+bindsym $mod+9 workspace number 9
+bindsym $mod+0 workspace number 10
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $ws1
@@ -166,17 +180,19 @@ bindsym $mod+minus scratchpad show
 bindsym $mod+i exec i3-input
 
 bindsym $mod+Shift+s move workspace to output left
+# bindsym $mod+Shift+u move workspace to output up
+# bindsym $mod+Shift+d move workspace to output down
 
-for_window [class=".*"] border pixel 5
-gaps inner 5
+for_window [class=".*"] border pixel 2
+gaps inner 4
 
 # class                 border  backgr. text    indicator child_border
 client.focused          #4c7899 #285577 #ffffff #2e9ef4   #ffff00
 client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
-client.unfocused        #333333 #222222 #888888 #292d2e   #222222
+client.unfocused        #333333 #222222 #888888 #292d2e   #2522222
 client.urgent           #2f343a #900000 #ffffff #900000   #900000
 client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
- 
+
 client.background       #ffffff
 
 # Pulse Audio controls
@@ -228,11 +244,27 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+
+bindsym $mod+Control+r exec i3-input -F 'rename workspace to "%s"' -P 'New name: '
+bindsym $mod+Control+s exec i3-input -F 'move workspace to output "%s"' -P 'Output (up/down/left/right): '
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
         # status_command ~/.config/i3/status_bar.sh
-        status_command i3blocks
+        # status_command i3blocks
+        status_command i3status
 }
 
+# NOT WORKING in Ubuntu
+# use `alsamixer`
+# exec --no-startup-id systemctl enable pulseaudio.service --user
+# exec --no-startup-id pulseaudio --start
+
 exec emacs --daemon
+
+# needs to work better with larger resolution screens
+exec --no-statup-id source ~/.fehbg
+
+# not really working yet:
+exec compton
