--- a/termite/config
+++ b/termite/config
@@ -3,7 +3,10 @@
 #audible_bell = false
 #clickable_url = true
 #dynamic_title = true
-font = Monospace 9
+#font = Monospace 9
+#font = Monospace 12
+font = Monospace 18
+# font = Monospace 18
 #fullscreen = true
 #geometry = 640x480
 #icon_name = terminal
@@ -38,40 +41,71 @@ browser = xdg-open
 # "off", "left" or "right"
 #scrollbar = off
 
+# [colors]
+# # If both of these are unset, cursor falls back to the foreground color,
+# # and cursor_foreground falls back to the background color.
+# #cursor = #dcdccc
+# #cursor_foreground = #dcdccc
+#
+# #foreground = #dcdccc
+# #foreground_bold = #ffffff
+# #background = #3f3f3f
+#
+# # 20% background transparency (requires a compositor)
+# #background = rgba(63, 63, 63, 0.8)
+#
+# # If unset, will reverse foreground and background
+# #highlight = #2f2f2f
+#
+# # Colors from color0 to color254 can be set
+# color0 = #3f3f3f
+# color1 = #705050
+# color2 = #60b48a
+# color3 = #dfaf8f
+# color4 = #506070
+# color5 = #dc8cc3
+# color6 = #8cd0d3
+# color7 = #dcdccc
+# color8 = #709080
+# color9 = #dca3a3
+# color10 = #c3bf9f
+# color11 = #f0dfaf
+# color12 = #94bff3
+# color13 = #ec93d3
+# color14 = #93e0e3
+# color15 = #ffffff
+#
+# Solarized light color scheme
+
 [colors]
-# If both of these are unset, cursor falls back to the foreground color,
-# and cursor_foreground falls back to the background color.
-#cursor = #dcdccc
-#cursor_foreground = #dcdccc
-
-#foreground = #dcdccc
-#foreground_bold = #ffffff
-#background = #3f3f3f
-
-# 20% background transparency (requires a compositor)
-#background = rgba(63, 63, 63, 0.8)
-
-# If unset, will reverse foreground and background
-#highlight = #2f2f2f
-
-# Colors from color0 to color254 can be set
-color0 = #3f3f3f
-color1 = #705050
-color2 = #60b48a
-color3 = #dfaf8f
-color4 = #506070
-color5 = #dc8cc3
-color6 = #8cd0d3
-color7 = #dcdccc
-color8 = #709080
-color9 = #dca3a3
-color10 = #c3bf9f
-color11 = #f0dfaf
-color12 = #94bff3
-color13 = #ec93d3
-color14 = #93e0e3
-color15 = #ffffff
-
+foreground = #657b83
+foreground_bold = #073642
+#foreground_dim = #888888
+background = #fdf6e3
+# background = rgba(63, 63, 63, 0.95)
+cursor = #586e75
+#
+# if unset, will reverse foreground and background
+#highlight = #839495
+#
+# colors from color0 to color254 can be set
+color0 = #073642
+color1 = #dc322f
+color2 = #859900
+color3 = #b58900
+color4 = #268bd2
+color5 = #d33682
+color6 = #2aa198
+color7 = #eee8d5
+color8 = #002b36
+color9 = #cb4b16
+color10 = #586e75
+color11 = #657b83
+color12 = #839496
+color13 = #6c71c4
+color14 = #93a1a1
+color15 = #fdf6e3
+#
 [hints]
 #font = Monospace 12
 #foreground = #dcdccc
@@ -84,3 +118,49 @@ color15 = #ffffff
 #roundness = 2.0
 
 # vim: ft=dosini cms=#%s
+
+# ----
+# Terminal.sexy START
+
+# [colors]
+#
+# # special
+# foreground      = #c5c8c6
+# foreground_bold = #c5c8c6
+# cursor          = #c5c8c6
+# background      = #1d1f21
+#
+# # black
+# color0  = #282a2e
+# color8  = #373b41
+#
+# # red
+# color1  = #a54242
+# color9  = #cc6666
+#
+# # green
+# color2  = #8c9440
+# color10 = #b5bd68
+#
+# # yellow
+# color3  = #de935f
+# color11 = #f0c674
+#
+# # blue
+# color4  = #5f819d
+# color12 = #81a2be
+#
+# # magenta
+# color5  = #85678f
+# color13 = #b294bb
+#
+# # cyan
+# color6  = #5e8d87
+# color14 = #8abeb7
+#
+# # white
+# color7  = #707880
+# color15 = #c5c8c6
+#
+# Terminal.sexy END
+# ----
