--- a/i3wm/config
+++ b/i3wm/config
@@ -46,10 +46,11 @@ bindsym $mod+d exec dmenu_run
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+bindcode $mod+66+41 exec termite
+bindcode $mod+45 focus left
+bindcode $mod+46 focus down
+bindcode $mod+31 focus up
+bindcode $mod+47 focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
